# Dreamland

./: .gitignore  LICENSE.md  README.md  README_CN.md  appveyor.yml  azure-pipelines.yml  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  d.bat  proguard-rules.pro  uninstall.sh
app/libs/: pine-core.aar  pine-enhances.aar
app/magisk/: .gitattributes  customize.sh
app/src/androidTest/java/com/canyie/dreamland/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/top/canyie/dreamland/ipc/: IDreamlandManager.aidl  ModuleInfo.aidl
app/src/main/cpp/: CMakeLists.txt  main.cpp  pine.h  riru.h
app/src/main/cpp/dreamland/: android.cpp  android.h  binder.cpp  binder.h  dex_loader.cpp  dex_loader.h  dreamland.cpp  dreamland.h  flavor.cpp  flavor.h  native_hook.cpp  native_hook.h  override_jni_methods.cpp  override_jni_methods.h  resource_types.h  resources_hook.cpp  resources_hook.h  riru_flavor.cpp  zygisk_flavor.cpp
app/src/main/cpp/sandhook/: sandhook_jni.h
app/src/main/cpp/utils/: byte_order.h  jni_helper.h  log.h  macros.h  required_platform_classes.h  scoped_elf.h  scoped_local_ref.h  selinux.c  selinux.h  selinux_helper.cpp  selinux_helper.h  utils.h  well_known_classes.cpp  well_known_classes.h
app/src/main/java/android/app/: AndroidAppHelper.java
app/src/main/java/android/content/res/: XModuleResources.java  XResources.java  XResourcesSuperClass.java  XTypedArraySuperClass.java
app/src/main/java/com/canyie/dreamland/: DreamlandBridge.java  Main.java  MainActivity.java
app/src/main/java/com/canyie/dreamland/core/: AppManager.java  BaseManager.java  Dreamland.java  GsonBasedManager.java  ModuleInfo.java  ModuleManager.java
app/src/main/java/com/canyie/dreamland/hookers/: ActivityThreadHooker.java  ContextImplHooker.java  LoadedApkHooker.java
app/src/main/java/com/canyie/dreamland/utils/: AppGlobals.java  DLog.java  HiddenApis.java  IOUtils.java  Preconditions.java
app/src/main/java/com/canyie/dreamland/utils/collections/: ConcurrentHashSet.java
app/src/main/java/com/canyie/dreamland/utils/reflect/: Reflection.java  ReflectiveException.java  UncheckedClassNotFoundException.java  UncheckedIllegalAccessException.java  UncheckedInstantiationException.java  UncheckedInvocationTargetException.java  UncheckedNoSuchFieldException.java  UncheckedNoSuchMethodException.java
app/src/main/java/de/robv/android/xposed/: DexCreator.java  SELinuxHelper.java
app/src/main/java/mirror/android/app/: ActivityThread.java
app/src/main/java/mirror/android/os/: ServiceManager.java
app/src/main/java/top/canyie/dreamland/: DreamlandBridge.java  GetClassLoaderHook.java  Main.java  RuntimeUtils.java
app/src/main/java/top/canyie/dreamland/core/: AppManager.java  BaseManager.java  Dreamland.java  GsonBasedManager.java  ModuleInfo.java  ModuleManager.java  PackageMonitor.java
app/src/main/java/top/canyie/dreamland/ipc/: BinderServiceProxy.java  DreamlandManagerService.java  ModuleInfo.java
app/src/main/java/top/canyie/dreamland/utils/: AppConstants.java  AppGlobals.java  BuildUtils.java  DLog.java  HiddenApis.java  IOUtils.java  Preconditions.java  RuntimeUtils.java  Zygote.java
app/src/main/java/top/canyie/dreamland/utils/collections/: ConcurrentHashSet.java
app/src/main/java/top/canyie/dreamland/utils/reflect/: Reflection.java  ReflectiveException.java  UncheckedClassNotFoundException.java  UncheckedIllegalAccessException.java  UncheckedInstantiationException.java  UncheckedInvocationTargetException.java  UncheckedNoSuchFieldException.java  UncheckedNoSuchMethodException.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/canyie/dreamland/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
hiddenapi-stubs/: build.gradle
hiddenapi-stubs/src/main/: AndroidManifest.xml
hiddenapi-stubs/src/main/java/android/app/: ActivityThread.java  LoadedApk.java
hiddenapi-stubs/src/main/java/android/content/pm/: IPackageManager.java  PackageParser.java
hiddenapi-stubs/src/main/java/android/content/res/: AssetManager.java  AssetManagerHidden.java  Resources.java  ResourcesHidden.java  ResourcesImpl.java  ResourcesKey.java  TypedArray.java  TypedArrayHidden.java
hiddenapi-stubs/src/main/java/android/os/: SELinux.java  SystemProperties.java  UserHandle.java  UserHandleHidden.java
hiddenapi-stubs/src/main/java/xposed/dummy/: XResourcesSuperClass.java  XTypedArraySuperClass.java
sandhook/: build.gradle  local.properties
sandhook/gradle/wrapper/: gradle-wrapper.properties
sandhook/src/main/cpp/: CMakeLists.txt  sandhook.cpp
sandhook/src/main/cpp/art/: art_method.cpp
sandhook/src/main/cpp/includes/: art_method.h  sandhook_jni.h
sandhook/src/main/java/com/swift/sandhook/: SandHook.java
sandhook/src/main/java/com/swift/sandhook/blacklist/: HookBlackList.java
template/: customize.sh  install.sh  languages.sh  post-fs-data.sh  properties.json  sepolicy.rule  service.sh  uninstall.sh
template/common/: post-fs-data.sh  sepolicy.rule  service.sh
xposed-bridge/: build.gradle  proguard-rules.pro
xposed-bridge/src/main/java/de/robv/android/xposed/: XC_MethodHook.java
xposed-bridge/src/main/java/de/robv/android/xposed/callbacks/: XC_LoadPackage.java  XCallback.java
